# gpu_monitor

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  gpu_logger.hpp  gpu_logger_cuda.cu  gpu_logger_hip.hpp  main.cpp  main.cu
include/gpu_monitor/: gpu_monitor.h  gpu_monitor.hpp
python_extension/: README.md  requirements.txt  setup.py
python_extension/src/: main.cpp
python_extension/tests/: main.py
scripts/: README.md  mk_graph.py
src/: cpu_vmem.hpp  gpu_logger_cuda.hpp  gpu_logger_hip.cpp  gpu_monitor.hpp  gpu_monitor_cuda.cu  gpu_monitor_cuda.hpp  gpu_monitor_hip.cpp  gpu_monitor_hip.hpp  libgpu_monitor.cu  main.cpp
test/: Makefile  api.cu  message_insert_test.cpp
